--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,14 @@
   "name": "Flextest",
   "version": "1.0",
   "description": "Extends the Developer Tools, adding a panel in which users can edit test steps and save it as JSON.",
-  "devtools_page": "./devtools/devtools.html",
+  "background": {
+    "scripts": ["eventPage.js"],
+    "persistent": false
+  },
+  "devtools_page": "devtools/devtools.html",
+  "content_scripts": [{
+    "js": ["lib/jquery-2.1.3.js", "contentScript.js"],
+    "matches": ["http://*/*", "https://*/*"]
+  }],
   "manifest_version": 2
 }
